--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "block-ddos",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "This package provide a middleware to block multiple request",
 	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
+	"types": "dist/types.d.ts",
 	"license": "MIT",
 	"author": "Alessandro Dev",
 	"contributors": [],
