--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "block-ddos",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "This package provide a middleware to block multiple request",
-	"main": "dist/index.js",
-	"types": "dist/types.d.ts",
+	"main": "index.js",
+	"types": "index.d.ts",
 	"license": "MIT",
 	"author": "Alessandro Dev",
 	"contributors": [],
@@ -16,15 +16,13 @@
 		"Middleware"
 	],
 	"scripts": {
-		"prebuild": "rimraf ./dist && npm run check:circular-deps",
+		"prebuild": "./clear.sh && npm run check:circular-deps",
 		"build": "tsc -p tsconfig.lib.json",
 		"test:dev": "jest --silent --runInBand",
 		"test:cov": "jest --silent --runInBand --coverage",
 		"test": "jest --silent --runInBand --forceExit",
 		"test:verbose": "jest --runInBand",
 		"check:circular-deps": "madge --circular --extensions ts ./lib",
-		"prepublish:lib": "rimraf ./dist && npm run check:circular-deps",
-		"publish:lib": "npm publish",
 		"format:all": "npx prettier --write .",
 		"check:types": "tsc -p ./tsconfig.lib.json --noEmit"
 	},
@@ -42,6 +40,7 @@
 		"@types/jest": "^27.0.1",
 		"@types/node": "^18.11.18",
 		"jest": "^27.5.1",
+		"lint-staged": "^13.1.2",
 		"madge": "^6.0.0",
 		"prettier": "^2.8.1",
 		"rimraf": "^4.1.2",
@@ -54,7 +53,10 @@
 		"express": "^4.17.17"
 	},
 	"files": [
-		"dist/*",
+		"index.d.ts",
+		"types.d.ts",
+		"index.js",
+		"types.js",
 		"package.json"
 	],
 	"lint-staged": {
