--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,8 @@
 		"strict": true,
 		"lib": ["ES2017"],
 		"sourceMap": true,
-		"outDir": "./dist",
-		"esModuleInterop": true,
-		"baseUrl": "./",
-		"paths": {
-			"@block-ddos": ["lib/index"]
-		}
+		"outDir": ".",
+		"esModuleInterop": true
 	},
 	"include": ["lib/*", "lib/**/*", "example", "tests", "types"]
 }
