--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
 		"outDir": ".",
 		"esModuleInterop": true
 	},
-	"exclude": ["index.d.ts", "index.js", "types.d.ts", "types.js"],
+	"exclude": ["index.d.ts", "index.js", "types.d.ts", "types.js", "global-setup.ts", "jest.config.ts"],
 	"include": ["."]
 }
