--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ index.d.ts
 index.js
 types.d.ts
 types.js
+index.min.js
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
